Closed Bug 826463 Opened 13 years ago Closed 13 years ago

After disconnect BT headset while in-call, audio rerouting takes too long

Categories

(Firefox OS Graveyard :: General, defect, P1)

ARM
Gonk (Firefox OS)
defect

Tracking

(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)

RESOLVED FIXED
B2G C4 (2jan on)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: ggrisco, Assigned: gyeh)

Details

(Whiteboard: [cr 436620])

Attachments

(1 file)

1. Turn on bluetooth 2. Pair to a headset 3. Make a MO call 4. Terminate the connection with BT headset, via BT settings Expected Result: Audio should route back to phone as soon as possible Actual Result: The audio is routed to phone after a delay of 30 seconds or so
blocking-basecamp: --- → ?
Whiteboard: cr 436620
Eric, are you the best assignee here? Should we find someone else?
blocking-basecamp: ? → +
Whiteboard: cr 436620 → [cr 436620]
Eric, ask Joe or Kevin to reassign if needed - we threw a bunch of these your way while you were sleeping ;)
Assignee: nobody → echou
Priority: -- → P1
Target Milestone: --- → B2G C4 (2jan on)
Eric, I would like to take this. :)
Assignee: echou → gyeh
(In reply to Dietrich Ayala (:dietrich) from comment #2) > Eric, ask Joe or Kevin to reassign if needed - we threw a bunch of these > your way while you were sleeping ;) No problem. It has been confirmed by Gina and she will take a look into this. Thanks, Gina. :)
We will close sco socket before disconnecting with a bluetooth headset.
Attachment #697780 - Flags: review?(echou)
Comment on attachment 697780 [details] [diff] [review] Patch 1(v1): Close Sco socket before disconnecting Review of attachment 697780 [details] [diff] [review]: ----------------------------------------------------------------- That will fix the problem. Thanks!
Attachment #697780 - Flags: review?(echou) → review+
Is this ready for check-in?
(In reply to Dietrich Ayala (:dietrich) from comment #7) > Is this ready for check-in? Yep, however inbound had been down for several hours yesterday so we couldn't check in.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: