Bug 826463 - Patch 1(v1): After disconnect BT headset while in-call, audio rerouting takes too long, r=echou