dom/bluetooth/BluetoothHfpManager.cpp
@@ -604,7 +604,7 @@ BluetoothHfpManager::ReceiveSocketData(UnixSocketRawData* aMessage)
   // For more information, please refer to 4.34.1 "Bluetooth Defined AT
   // Capabilities" in Bluetooth hands-free profile 1.6
   if (msg.Find("AT+BRSF=") != -1) {
-    SendCommand("+BRSF: ", 23);
+    SendCommand("+BRSF: ", 33);
   } else if (msg.Find("AT+CIND=?") != -1) {
     // Asking for CIND range
     SendCommand("+CIND: ", 0);
@@ -831,6 +831,7 @@ BluetoothHfpManager::Disconnect()
     return;
   }
 
+  CloseScoSocket();
   CloseSocket();
 }
 
